
User-visible changes.

Since 0.3.0 (2006-05-05)
========================

Features
--------
* better heuristics: supports heredocs at last, including variants your editor
  is probably unable to handle, and =begin/=end comments
* new color scheme, with alternating shades of the base colors
* -w to set $VERBOSE=true (turns on warnings)
* --text-report and --text-summary
* --sort and --sort-reverse for the summaries and reports
* --threshold and --only-uncovered
* --replace-progname

Backwards incompatible changes
------------------------------
* renamed --text to --text-counts and --rich-text to --text-coverage: they
  were misnamed to begin with
* changed the meaning of -t and -T (--text-summary and --text-report)
* $0 is not changed by default for each loaded file anymore; the old 
  behavior (modulo a small bugfix) can be reproduced with --replace-progname

Since 0.2.0 (2006-02-25)
========================

Features
--------
* --exclude-only
* consolidate multiple references to the same underlying .rb file
  (much needed for Rails)
* --test-unit-only

Fixes
-----
* consider and/op operators
* honor --no-color in (rich) text mode 
* output valid XHTML indices

Since 0.1.0
===========
Tons. Better output, MUCH faster (two orders of magnitude), better command
line...